corrected overflow

--- a/CSS/itinerary/my-itineraries/my-itineraries.css
+++ b/CSS/itinerary/my-itineraries/my-itineraries.css
@@ -125,7 +125,7 @@ button {
 #search {
     padding: 12px 20px;
     font-size: 15px;
-    height: 30px;
+    height: 54px;
     width: 350px;
     border: 2px;
     transition: all 0.3s ease;
@@ -167,26 +167,23 @@ main {
 }
 
 #my-itineraries {
-    display: flex;
-    gap: 1rem;
-    flex-direction: row;
-    max-height: 600px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: hidden;
+    height: 100%;
 }
 
 #preview {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+    display: grid;
+    grid-auto-columns: 3fr 2fr;
     padding: 1rem;
     background-color: var(--oro-suave);
-    flex: 1;
 }
 
 
 
 #intro {
-    height: 60%;
+    height: 100%;
     width: 100%;
     border-radius: 2em;
 }
@@ -208,10 +205,10 @@ main {
 
 
 #content {
-    padding: 1rem 2rem;
+    padding: 1rem 0;
     background-color: var(--oro-suave);
     display: flex;
-    flex: 1;
+    overflow: hidden;
 }
 
 #side-bar {
@@ -224,6 +221,6 @@ main {
 #list-container {
     margin: 1rem;
     padding: 1rem;
-    overflow: auto;
     width: 100%;
+    overflow-y: auto;
 }
